# rewrite

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .modernecfg  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEDUPLICATION_IMPLEMENTATION.md  DebugAssignment.scala  DebugSpans.java  DebugTupleSpans.java  IDE.properties.tmp  LICENSE  PartialTest.scala  PathFileManager.kt  PathJavaFileObject.kt  README.md  README2.md  Scala.md  TestComplexType.java  TestDebugTuple.scala  TestSpanDebug.scala  build.gradle  build.gradle.kts  gradle.properties  gradle.properties.enc  gradlew  lombok.config  recipes.csv  rewrite.yml  settings.gradle  settings.gradle.kts  suppressions.xml  test-output.txt  test_output.txt
rewrite-python/rewrite/: .gitignore  CLAUDE.md  README.md  pyproject.toml
rewrite-python/rewrite/scripts/: generate_stubs.py
rewrite-python/rewrite/src/rewrite/: __init__.py  category.py  data_table.py  decorators.py  discovery.py  execution.py  markers.py  markers.pyi  marketplace.py  parser.py  parser.pyi  preconditions.py  recipe.py  result.py  style.py  tree.py  tree.pyi  utils.py  visitor.py
rewrite-python/rewrite/src/rewrite/java/: __init__.py  extensions.py  markers.py  markers.pyi  support_types.py  support_types.pyi  tree.py  tree.pyi  visitor.py
rewrite-python/rewrite/src/rewrite/java/remote/: __init__.py  extensions.py  receiver.py  register.py  sender.py
rewrite-python/rewrite/src/rewrite/python/: __init__.py  _parser_visitor.py  _py2_parser_visitor.py  _version_detect.py  add_import.py  dependency_workspace.py  extensions.py  import_utils.py  markers.py  markers.pyi  method_matcher.py  preconditions.py  printer.py  remove_import.py  style.py  support_types.py  support_types.pyi  tree.py  tree.pyi  ty_client.py  type_mapping.py  type_utils.py  visitor.py
rewrite-python/rewrite/src/rewrite/python/format/: __init__.py  _helpers.py  auto_format.py  blank_lines.py  minimum_viable_spacing.py  normalize_format.py  normalize_line_breaks_visitor.py  normalize_tabs_or_spaces.py  remove_trailing_whitespace_visitor.py  spaces_visitor.py  tabs_and_indents_visitor.py
rewrite-python/rewrite/src/rewrite/python/recipes/: __init__.py  add_literal_method_argument.py  change_import.py  change_method_name.py  change_package.py  change_type.py  datetime_utc_now.py  delete_method_argument.py  remove_pass.py  reorder_method_arguments.py
rewrite-python/rewrite/src/rewrite/python/remote/: __init__.py  extensions.py  receiver.py  sender.py
rewrite-python/rewrite/src/rewrite/python/search/: __init__.py
rewrite-python/rewrite/src/rewrite/python/template/: __init__.py  _fstring_support.py  _tstring_support.py  capture.py  comparator.py  coordinates.py  dependency_workspace.py  engine.py  pattern.py  placeholder.py  replacement.py  template.py
rewrite-python/rewrite/src/rewrite/rpc/: __init__.py  __main__.py  _annotation_constant_value_codec.py  bundle_children.py  child_connection.py  facade.py  java_recipe.py  java_rpc_client.py  python_receiver.py  python_sender.py  receive_queue.py  rpc_recipe.py  send_queue.py  server.py  toml_receiver.py  toml_sender.py  venv_manager.py
rewrite-python/rewrite/src/rewrite/test/: __init__.py  rewrite_test.py  spec.py
rewrite-python/rewrite/src/rewrite/toml/: __init__.py  markers.py  markers.pyi  tree.py  tree.pyi  visitor.py
rewrite-python/rewrite/tests/: conftest.py  test_data_table.py  test_discovery_root.py  test_id_normalization.py  test_marketplace.py  test_marketplace_first_wins.py  test_preconditions.py  test_replace_identity.py  test_rewrite_test.py  test_secret_option.py  test_undefined_names.py  test_visitor_adapt.py
rewrite-python/rewrite/tests/python/: test_add_import.py  test_method_matcher.py  test_remove_import.py  test_type_attribution.py  test_type_utils.py  version_detect_test.py  whitespace_attachment_test.py
rewrite-python/rewrite/tests/python/all/: conftest.py  test_empty_diff_detection.py  test_fenced_marker_printer.py
rewrite-python/rewrite/tests/python/all/format/: auto_format_corrections_test.py  auto_format_edge_cases_test.py  auto_format_idempotency_test.py  auto_format_subtree_test.py  blank_lines_test.py  full_formatter_test.py  minimum_viable_spacing_test.py  normalize_format_test.py  normalize_line_breaks_visitor_test.py  normalize_tabs_or_spaces_test.py  remove_trailing_whitespace_visitor_test.py  tabs_and_indents_visitor_test.py
rewrite-python/rewrite/tests/python/format/: test_auto_format_helpers.py
rewrite-python/rewrite/tests/python/py27/: bom_test.py  comment_test.py  control_flow_test.py  expressions_test.py  funcdef_test.py  imports_test.py  legacy_not_equal_test.py  line_continuation_test.py  literal_test.py  remaining_test.py  round_trip_test.py  semicolon_test.py  simple_stmts_test.py  sweep_test.py  ternary_test.py  trailing_newline_test.py  tuple_assign_test.py
rewrite-python/rewrite/tests/python/py311/: conftest.py  trystar_test.py
rewrite-python/rewrite/tests/python/py312/: conftest.py  fstring_syntax_test.py  match_test.py  type_alias_test.py  type_alias_with_params_test.py  type_params_test.py  with_parens_test.py
rewrite-python/rewrite/tests/python/py313/: conftest.py  type_param_defaults_test.py
rewrite-python/rewrite/tests/python/py314/: conftest.py  test_tstring_parsing.py  test_tstring_template.py
rewrite-python/rewrite/tests/python/template/: __init__.py  test_capture.py  test_comparator.py  test_coordinates.py  test_dependency_workspace.py  test_engine.py  test_pattern.py  test_placeholder.py  test_replacement.py  test_template.py  test_template_indentation.py  test_tstring_support.py
rewrite-python/rewrite/tests/recipes/: __init__.py  test_change_import.py  test_datetime_utc_now.py  test_remove_pass.py  test_uses_import.py
rewrite-python/rewrite/tests/rpc/: test_bundle_children.py  test_child_connection.py  test_child_mode.py  test_facade.py  test_java_recipes.py  test_marker_roundtrip.py  test_opaque_roundtrip.py  test_preconditions_wire.py  test_rpc_recipe_delegation.py  test_server.py  test_venv_manager.py
(+11203 files in other folders)
