[project]
name = "confproj"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
cpu = ["foo"]
cuda = ["bar"]

[dependency-groups]
g1 = ["baz"]
g2 = ["foo"]

[tool.uv.sources]
foo = { path = "libs/foo" }
bar = { path = "libs/bar" }
baz = { path = "libs/baz" }

[tool.uv]
conflicts = [
    [{ extra = "cpu" }, { extra = "cuda" }],
    [{ group = "g1" }, { group = "g2" }],
]
